Эксперименты с различными GC [#276508]