@@ -1,5 +1,33 @@
 package com.gc;
 
+/** GC Types
+ * Serial (-XX:+UseSerialGC)
+ * Parallel (-XX:+UseParallelGC)
+ * Parallel compacting (-XX:+UseParallelOldGC)
+ * Concurrent mark-sweep (CMS) (-XX:+UseConcMarkSweepGC)
+ * G1 (-XX:+UseG1GC)
+ */
+
+/** GC Statistics
+ * -Xmx64m (Heap max size)
+ * -Xlog:gc (PrintGC)
+ * -Xlog:gc* (PrintGCDetails)
+ * -Xlog:task*=debug (PrintGCTaskTimeStamps)
+ * -Xlog:safepoint (PrintGCApplicationStoppedTime, PrintGCApplicationConcurrentTime)
+ *
+ * -Xlog:all=info:stdout:uptime,levels,tags
+ * -Xlog:gc=debug:file=gc.txt:none
+ * -Xlog:gc=trace:file=gctrace.txt:uptimemillis,pids:filecount=5,filesize=1024
+ * -Xlog:gc::uptime,tid
+ * -Xlog:gc,safepoint
+ * -Xlog:::time,level,tags
+ * -Xlog:gc*,safepoint::uptime,time
+ * -Xlog:gc=trace,safepoint::time,uptime
+ * -Xlog:gc*,safepoint::uptime,time,level,tags
+ *
+ * https://docs.oracle.com/javase/9/tools/java.htm#GUID-BE93ABDC-999C-4CB5-A88B-1994AAAC74D5__CONVERTGCLOGGINGFLAGSTOXLOG-A5046BD1
+ */
+
 public class User {
 
     private static long count = 0;
@@ -38,12 +66,13 @@ public class User {
 
     public static void iter(int i) {
         for (int x = 0; x <= i; x++) {
-            new User(10000);
+            new User(10000 * x);
         }
         info();
     }
 
     public static void main(String[] args) {
+        info();
         User uEmpty = new User();
         info();
         User uInit = new User(10000);
@@ -54,6 +83,7 @@ public class User {
     }
 
     public static void info() {
+        /*
         System.out.println("=".repeat(50));
         double mb = 1024.0 * 1024.0;
         Runtime rt = Runtime.getRuntime();
@@ -62,5 +92,6 @@ public class User {
         System.out.printf("Free: %s%n", rt.freeMemory() / mb);
         System.out.printf("Used: %s%n", (rt.totalMemory() - rt.freeMemory()) / mb);
         System.out.println("=".repeat(50));
+        */
     }
 }
